﻿Version 2.x.x - Future Release
* Add support for Career mode limitations
* Add Unity Skin option
* Add new flags and icons
* Moved "Order by Parts" option to the main UI
* Fixed bug where most of the UI would be disabled if a craft had nothing in the coupling category
* Fixed incorrect text on the "Use Text Action Groups" button
* Fixed version checking which had an incorrect check URL
* Added Changelog to the version checking system
* Removed unused "Propulsion" category (this exists in KSP's library for some reason)
* Minor GUI enhancments
* More Large Code Optimizations

Version 2.0.0 - June 19, 2017
* Removed Action Group Button Modality (All Views)
* New Overhauled UI (optional)
* Part Highlighting is Automatic When a Part is Selected (New View Only)
* Part Find Function moved to clicking the part name in the actions list (New View Only)
* Added Version Checking
* Added Dependency Info and Licenses in accordance with posting guidelines
* Large Code Optimizations

Version 1.4.2 - June 15, 2017
* Restore Blizzy's Toolbar Support
* Fix Bug that prevented Recap window from being closed
* Fix Bug that added an erroneous "REPLACEWITHDEFAULT" button


Version 1.4.1 - June 10, 2017
* Remove Blizzy's Toolbar support (emergency bug fix)

Version 1.4.0 - June 10, 2017
* Update to KSP 1.3
* Add Application Launcher button